# messagarator

./: .gitignore  README.md  confluent-stack.yml  docker-compose.yml  pyproject.toml
data-generator/: Dockerfile  data_generator.py
flink/: process.sql
kafka/connectors/: file-sink-connector.json  test_sink.json  test_sink_nested.json  test_sink_nested_flat.json  test_sink_nested_psql.json
