[project]
name = "messagarator"
version = "0.1.0"
description = ""
authors = [
    {name = "kagenihisomi",email = "asdftoger@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka (>=2.10.0,<3.0.0)",
    "kafka-python (>=2.2.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
