[project]
name = "messagarator"
version = "0.1.0"
description = ""
authors = [
    {name = "kagenihisomi",email = "asdftoger@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "confluent-kafka[avro,json,schemaregistry] (>=2.10.1,<3.0.0)",
    "kafka-python (>=2.2.11,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
loguru = "^0.7.3"

